1999-02-01  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (keywordlog): New tests keywordlog-22 and
	keywordlog-23 test keyword expansion and $Log.  Adjust other tests
	so that revisions differ more from each other, so this is a
	better test.

1999-01-29  Jim Kingdon  <http://www.cyclic.com>

	* commit.c (checkaddfile): If options is "", treat it the same as
	NULL.  Centralize this check, and the one for it starting with
	"-k", at the start of the function.

	* rcs.c, rcs.h (RCS_setexpand): New function.
	* admin.c (admin_fileproc): Access keyword expansion field via
	RCS_getexpand and RCS_setexpand, rather than directly.
	* commit.c (checkaddfile): When resurrecting, set the keyword
	expansion mode.
	* sanity.sh (binfiles3): Adjust tests binfiles3-7 and binfiles3-8
	for the new behavior.

1999-01-27  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (multiroot3): Add new variant of multiroot3-10 test
	for RELATIVE_REPOS.  Move multiroot3-11 test out of the
	conditionals; it works the same for remote or local,
	RELATIVE_REPOS or no.

	* options.h.in: Make RELATIVE_REPOS the default, as has been
	announced as a future direction since 1997-10-11.
	* sanity.sh (multiroot): Tweak multiroot-update-1a and
	multiroot-update-1b tests to work with either RELATIVE_REPOS or
	non-RELATIVE_REPOS.

	* sanity.sh (client-9): Don't assume the time zone.

1999-01-26  Jim Kingdon  <http://www.cyclic.com>

	Fix one facet of the "cvs add -kb" re-adding problem (the other
	known facet is tested for by binfiles3-8).
	* add.c (add): When re-adding a file, set the keyword expansion
	as we normally would.
	* sanity.sh (binfiles3): New test binfiles3-6a tests for this.

1999-01-22  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (rmadd2): New tests, for undoing a commit.

1999-01-21  Eric Mumpower  <nocturne@cygnus.com>

	* sanity.sh (reposmv): Actually modify CVSROOT in current
	environment when calling functions, rather than trying to achieve